--- a/RoundScheduler/AddDefaultRounds.xaml
+++ b/RoundScheduler/AddDefaultRounds.xaml
@@ -1,17 +1,31 @@
 ﻿<Window x:Class="RoundScheduler.AddDefaultRounds"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="AddDefaultRounds" Height="300" Width="300">
-    <Grid>
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:RoundScheduler="clr-namespace:RoundScheduler"
+        Title="{Binding Source={x:Static RoundScheduler:ProgramTexts.SetRoundsWindowCaption}}"  Height="180" Width="290" ResizeMode="NoResize">
+    <Grid Margin="5">
+        <Grid.Resources>
+            <!--<Style TargetType="{x:Type DataGrid}">
+                <Setter Property="Margin" Value="2" />
+            </Style>-->
+            <Style TargetType="{x:Type Button}">
+                <Setter Property="Margin" Value="5" />
+            </Style>
+            <Style TargetType="{x:Type Label}">
+                <Setter Property="Margin" Value="5" />
+            </Style>
+            <Style TargetType="{x:Type ComboBox}">
+                <Setter Property="Margin" Value="3" />
+            </Style>
+        </Grid.Resources>
         <Grid.RowDefinitions>
-            <RowDefinition Height="40"/>
-            <RowDefinition Height="40"/>
-            <RowDefinition Height="40"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="130" />
         </Grid.ColumnDefinitions>
 
         <Label Content="Количество раундов" Grid.Column="0" Grid.Row="0"></Label>
