--- a/RoundScheduler/MainWindow.xaml
+++ b/RoundScheduler/MainWindow.xaml
@@ -1,7 +1,9 @@
 ﻿<Window x:Class="RoundScheduler.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:Utils="clr-namespace:RoundScheduler.Utils" Title="MainWindow" Height="350" Width="525">
+        xmlns:Utils="clr-namespace:RoundScheduler.Utils" xmlns:RoundScheduler="clr-namespace:RoundScheduler"
+        Title="{Binding Source={x:Static RoundScheduler:ProgramTexts.MainWindowCaption}}" Height="350" Width="600" ResizeMode="NoResize"
+        Name="MainWindow1">
 
   <Window.Resources>
         <Utils:IndexConverter x:Key="indexConverter" />
@@ -9,9 +11,9 @@
   </Window.Resources>
   <Grid>
         <Grid.Resources>
-            <Style TargetType="{x:Type DataGrid}">
+            <!--<Style TargetType="{x:Type DataGrid}">
                 <Setter Property="Margin" Value="2" />
-            </Style>
+            </Style>-->
             <Style TargetType="{x:Type Button}">
                 <Setter Property="Margin" Value="2" />
             </Style>
@@ -23,7 +25,7 @@
             </Style>
         </Grid.Resources>
         <Grid.RowDefinitions>
-            <RowDefinition Height="200"/>
+            <RowDefinition Height="270"/>
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -33,38 +35,39 @@
 
         <Grid Margin="5">
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="75" />
+                <ColumnDefinition Width="130"/>
+                <ColumnDefinition Width="65" />
             </Grid.ColumnDefinitions>
-            <Label Content="Раунд №" Grid.Row="0" Grid.Column="0"/>
+            <Label Content="{Binding Source={x:Static RoundScheduler:ProgramTexts.RoundNumber}}" Grid.Row="0" Grid.Column="0"/>
             <Label Content="{Binding Path=CurrentRoundIndex}" Grid.Row="0" Grid.Column="1"/>
-            <Label Content="Время раунда" Grid.Row="1" Grid.Column="0"/>
+            <Label Content="{Binding Source={x:Static RoundScheduler:ProgramTexts.RoundTime}}" Grid.Row="1" Grid.Column="0"/>
             <Label Content="{Binding Path=Timer.RoundTimeLeft}" Grid.Row="1" Grid.Column="1" />
-            <Label Content="Время перерыва" Grid.Row="2" Grid.Column="0"/>
-            <Label Content="{Binding Path=Timer.RestTimeLeft}" Grid.Row="2" Grid.Column="1" Margin="0, 20, 0, 0"/>
+            <Label Content="{Binding Source={x:Static RoundScheduler:ProgramTexts.RestTime}}" Grid.Row="2" Grid.Column="0"/>
+            <Label Content="{Binding Path=Timer.RestTimeLeft}" Grid.Row="2" Grid.Column="1" />
         </Grid>
 
         <DockPanel Grid.Row="1" Grid.Column="0" >
-            <Button Content="{Binding StartStopButtonText}" Command="{Binding StartTimerCommand}" Width="100" HorizontalAlignment="Left" IsEnabled="{Binding CanStart}"/>
-            <Button Content="{Binding PauseButtonText}" Command="{Binding PauseTimerCommand}" Width="100" HorizontalAlignment="Right"/>
+            <Button Content="{Binding StartStopButtonText}" Command="{Binding StartTimerCommand}" Width="90" HorizontalAlignment="Left"/>
+            <Button Content="{Binding PauseButtonText}" Command="{Binding PauseTimerCommand}" Width="90" HorizontalAlignment="Right"/>
         </DockPanel>
-      
-        <DataGrid Name="RoundsGrid" Grid.Row="0" Grid.Column="1" 
-                  ItemsSource="{Binding Path=Rounds}" AutoGenerateColumns="False">
-            <DataGrid.Columns>
-                <DataGridTextColumn IsReadOnly="True" Header="№ Раунда" Binding="{Binding Converter={StaticResource indexConverter2}, RelativeSource={RelativeSource AncestorType={x:Type DataGridRow}}}" />
+
+        <DataGrid Name="RoundsGrid" Grid.Row="0" Grid.Column="1" BeginningEdit="BeginingEditGridCellValue"
+                  ItemsSource="{Binding Path=Rounds}" AutoGenerateColumns="False" CanUserAddRows="False">        
+            <DataGrid.Columns>                
+                <DataGridTextColumn IsReadOnly="True" Header="{Binding Source={x:Static RoundScheduler:ProgramTexts.RoundNumber}}" Binding="{Binding Converter={StaticResource indexConverter2}, RelativeSource={RelativeSource AncestorType={x:Type DataGridRow}}}"/>
                 <!--Another columns setup in .cs code-behind file-->
             </DataGrid.Columns>
+            
         </DataGrid>
         <DockPanel Grid.Row="1" Grid.Column="1">
-            <Button Content="Создать программу" Name="InitializeRounds" />
-            <Button Content="Сохранить программу" Name="SaveRounds" />
-            <Button Content="Загрузить программу" Name="LoadRound" />
+            <Button Content="{Binding Source={x:Static RoundScheduler:ProgramTexts.CreateRounds}}" Name="InitializeRounds" />
+            <Button Content="{Binding Source={x:Static RoundScheduler:ProgramTexts.SaveRounds}}" Name="SaveRounds" Command="{Binding SaveRoundsComand}" />
+            <Button Content="{Binding Source={x:Static RoundScheduler:ProgramTexts.LoadRounds}}" Name="LoadRound"  Command="{Binding LoadRoundsCommand}"/>
         </DockPanel>
     </Grid>
 </Window>
